fmcsadmin
(c) 2017-2021 Emic Corporation <https://www.emic.co.jp/>
This software is distributed under the MIT License, see LICENSE.txt and NOTICE.txt for more information.

Version: 1.3.0 (in development)
- Support Apple Silicon on macOS.
- Built with Go 1.16.

Version: 1.2.0
Date: February 17, 2021
- Support Claris FileMaker Server for Linux.
- Add "DELETE" command to delete a schedule.
- Support "PLUGINS" type of "LIST" command to list Database Server calculation plug-ins for Claris FileMaker Server 19.2.1.
- Add "CERTIFICATE" command to manage SSL certificates for Claris FileMaker Server 19.2.1.
- Modify behavior of "GET CWPCONFIG" command and "SET CWPCONFIG" command on Linux.
- Modify behavior of outputting error messages for invalid parameters when using "GET CWPCONFIG", "GET SERVERCONFIG", "SET CWPCONFIG" and "SET SERVERCONFIG" command.
- Modify behavior of outputting error messages for unavailable commands when using "GET SERVERPREFS" command and "SET SERVERPREFS" command.
- Change error code for unavailable commands when using "GET SERVERPREFS" command and "SET SERVERPREFS" command.
- Modify behavior of "DISABLE" command without "-y" or "--yes" option.
- Add error messages for the FileMaker error code 21, 20402, 20405, 20406, 20408, 20630 and 20632.
- Update error messages for the FileMaker error code -1 and 1708.
- Built with Go 1.15.
- [INFO] Drop support for macOS High Sierra 10.13.
- [BUG FIX] Fix compatibility with Claris FileMaker Server 19.1.2 or later when using "SET SERVERCONFIG" command and "SET SERVERPREFS" command.

Version: 1.1.0
Date: June 17, 2020
- Support "--savekey" option of "OPEN" command for FileMaker Server 19.
- Add the notarized installer for macOS to support macOS Catalina 10.15.
- Built with Go 1.14.

Version: 1.0.0
Date: September 26, 2019
- Support and require FileMaker Admin API v2 of FileMaker Server 18 and FileMaker Cloud for AWS 1.18. Released as a stable version.
- Change to the MIT License.