@@ -5,6 +5,7 @@ go 1.16
 require (
 	github.com/mattn/go-scan v0.0.0-20200228002420-2250e6e52487
 	github.com/olekukonko/tablewriter v0.0.5
+	github.com/ramya-rao-a/go-outline v0.0.0-20210608161538-9736a4bde949 // indirect
 	github.com/stretchr/testify v1.7.0
-	golang.org/x/crypto v0.0.0-20201221181555-eec23a3978ad
+	golang.org/x/crypto v0.0.0-20210711020723-a769d52b0f97
 )
