@@ -4,6 +4,8 @@ This software is distributed under the MIT License, see LICENSE.txt and NOTICE.t
 
 Version: 1.3.0 (in development)
 - Support Apple Silicon on macOS.
+- Add "REMOVE" command to move databases out of hosted folder for Claris FileMaker Server 19.3.1.
+- Add an error message for the FileMaker error code 20501.
 - Built with Go 1.16.
 
 Version: 1.2.0
